made some changes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div id="initial-display" class="initial-display">
           <img src="/images/Icon.png" alt="icon for movies" />
           <p>Start exploring</p>
+          <div class="noItem"></div>
         </div>
       </div>
     </div>
