--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
@@ -47,7 +48,6 @@
         <div id="initial-display" class="initial-display">
           <img src="/images/Icon.png" alt="icon for movies" />
           <p>Start exploring</p>
-          <div class="noItem"></div>
         </div>
       </div>
     </div>
